# housing_chat

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: agent.py  conversation.py  filters.py  format.py  interaction_log.py  main.py  openai_client.py  service.py  tools.py
common/: config.py
db/: database.py  schema.sql
docs/superpowers/plans/: 2026-06-21-bot-assistant.md  2026-06-21-housing-chat.md
docs/superpowers/specs/: 2026-06-21-bot-assistant-design.md  2026-06-21-housing-chat-design.md
processor/: normalize.py  process.py
scraper/: browser.py  cdp_crawl.py  crawl.py  extract.py  multicat_crawl.py  recon.py  segmented_crawl.py
tests/: test_agent.py  test_config.py  test_conversation.py  test_crawl.py  test_database.py  test_database_ro.py  test_extract.py  test_filters.py  test_format.py  test_integration.py  test_interaction_log.py  test_normalize.py  test_openai_client.py  test_process.py  test_service.py  test_tools.py
tests/fixtures/: category_sample.html
