[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "housing-chat"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44",
    "openai>=1.40",
    "python-telegram-bot>=21.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["common", "db", "processor", "bot", "scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
